rock for mnist package

--- a/index.html
+++ b/index.html
@@ -346,6 +346,15 @@ scm-1:&nbsp;<a href="matio-scm-1.rockspec">rockspec</a><br/></td></tr>
 1.0-0:&nbsp;<a href="mattorch-1.0-0.rockspec">rockspec</a><br/></td></tr>
 <tr><td colspan="2" class="spacer"></td></tr>
 <td class="package">
+<p><a name="mnist"></a><b>mnist</b> - Mnist dataset<br/>
+</p><blockquote><p> <br/>
+
+<font size="-1"><a href="git://github.com/andresy/mnist.git">latest sources</a> | <a href="https://github.com/torch/mnist" target="_blank">project homepage</a> | License: BSD</font></p>
+</blockquote></a></td>
+<td class="version">
+scm-1:&nbsp;<a href="mnist-scm-1.rockspec">rockspec</a><br/></td></tr>
+<tr><td colspan="2" class="spacer"></td></tr>
+<td class="package">
 <p><a name="ncurses"></a><b>ncurses</b> - A lua wrapper for ncurses<br/>
 </p><blockquote><p>A lua wrapper for ncurses <br/>
 
