--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@ scm-1:&nbsp;<a href="async-scm-1.rockspec">rockspec</a><br/></td></tr>
 <td class="package">
 <p><a name="audio"></a><b>audio</b> - Audio library for Torch-7<br/>
 </p><blockquote><p> Support audio I/O (Load files) Common audio operations (Short-time Fourier transforms, Spectrograms) <br/>
-<p><b>External dependencies:</b> libfftw3,&nbsp;libsox</p>
-<font size="-1"><a href="git://github.com/soumith/lua---audio">latest sources</a> | <a href="https://github.com/soumith/lua---audio" target="_blank">project homepage</a> | License: BSD</font></p>
+
+<font size="-1"><a href="git://github.com/soumith/lua---audio">latest sources</a> | <a href="https://github.com/soumith/lua---audio" target="_blank">project homepage</a> | License: RWTFPL</font></p>
 </blockquote></a></td>
 <td class="version">
 0.1-0:&nbsp;<a href="audio-0.1-0.rockspec">rockspec</a><br/></td></tr>
