--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@ scm-1:&nbsp;<a href="cunn-scm-1.rockspec">rockspec</a><br/></td></tr>
 <p><a name="cunnx"></a><b>cunnx</b> - Torch CUDA Experimental Neural Network Modules<br/>
 </p><blockquote><p>The CUDA analog of nnx. Also contains some CUDA-only modules.<br/>
 
-<font size="-1"><a href="git://github.com/nicholas-leonard/cunnx.git">latest sources</a> | <a href="https://github.com/nicholas-leonard/cunnx" target="_blank">project homepage</a> | License: BSD</font></p>
+<font size="-1"><a href="git://github.com/nicholas-leonard/cunnx">latest sources</a> | <a href="https://github.com/nicholas-leonard/cunnx" target="_blank">project homepage</a> | License: BSD</font></p>
 </blockquote></a></td>
 <td class="version">
 scm-1:&nbsp;<a href="cunnx-scm-1.rockspec">rockspec</a><br/></td></tr>
@@ -160,7 +160,7 @@ scm-1:&nbsp;<a href="dok-scm-1.rockspec">rockspec</a><br/></td></tr>
 <p><a name="dp"></a><b>dp</b> - A deep learning library for the Torch7 distribution<br/>
 </p><blockquote><p>With an emphasis on flexibility through the elegant use of object-oriented design patterns, dp is a deep learning library inspired by pylearn2 designed for streamlining research and development using the Torch7 distribution. <br/>
 
-<font size="-1"><a href="https://github.com/nicholas-leonard/dp">latest sources</a> | <a href="https://github.com/nicholas-leonard/dp/blob/master/README.md" target="_blank">project homepage</a> | License: N/A</font></p>
+<font size="-1"><a href="git://github.com/nicholas-leonard/dp">latest sources</a> | <a href="https://github.com/nicholas-leonard/dp/blob/master/README.md" target="_blank">project homepage</a> | License: N/A</font></p>
 </blockquote></a></td>
 <td class="version">
 scm-1:&nbsp;<a href="dp-scm-1.rockspec">rockspec</a><br/></td></tr>
