cudnn ffi bindings for torch

--- a/index.html
+++ b/index.html
@@ -103,6 +103,15 @@ scm-1:&nbsp;<a href="class-scm-1.rockspec">rockspec</a><br/>0.5.0-0:&nbsp;<a hre
 scm-1:&nbsp;<a href="csvigo-scm-1.rockspec">rockspec</a><br/></td></tr>
 <tr><td colspan="2" class="spacer"></td></tr>
 <td class="package">
+<p><a name="cudnn"></a><b>cudnn</b> - Torch7 FFI bindings for NVIDIA CuDNN kernels!<br/>
+</p><blockquote><p> All CuDNN modules exposed as nn.Module derivatives so that they can be used with torch's neural network package <br/>
+
+<font size="-1"><a href="git://github.com/soumith/cudnn.torch.git">latest sources</a> | <a href="https://github.com/soumith/cudnn.torch" target="_blank">project homepage</a> | License: BSD</font></p>
+</blockquote></a></td>
+<td class="version">
+scm-1:&nbsp;<a href="cudnn-scm-1.rockspec">rockspec</a><br/></td></tr>
+<tr><td colspan="2" class="spacer"></td></tr>
+<td class="package">
 <p><a name="cunn"></a><b>cunn</b> - Torch CUDA Neural Network Implementation<br/>
 </p><blockquote><p> <br/>
 
