Add rockspec for lcpp, C++ preprocessor.
This is used for the MuJoCo FFI bindings, for now.

--- a/index.html
+++ b/index.html
@@ -310,6 +310,15 @@ scm-1:&nbsp;<a href="graph-scm-1.rockspec">rockspec</a><br/></td></tr>
 1.0-0:&nbsp;<a href="json-1.0-0.rockspec">rockspec</a><br/></td></tr>
 <tr><td colspan="2" class="spacer"></td></tr>
 <td class="package">
+<p><a name="lcpp"></a><b>lcpp</b> - a C PreProcessor in Lua 5.1 for LuaJIT ffi<br/>
+</p><blockquote><p> This module offers a standard preprocessor for C code in pure Lua. The primary usecase is to enable LuaJIT ffi preprocessing. But you can also preprocess any other data (even Lua code itself). github site: (<a href="https://github.com/willsteel/lcpp" target="_blank">https://github.com/willsteel/lcpp</a>) <br/>
+
+<font size="-1"><a href="git://github.com/willsteel/lcpp.git">latest sources</a> | <a href="http://lcpp.schmoock.net/" target="_blank">project homepage</a> | License: MIT/X11</font></p>
+</blockquote></a></td>
+<td class="version">
+scm-1:&nbsp;<a href="lcpp-scm-1.rockspec">rockspec</a><br/></td></tr>
+<tr><td colspan="2" class="spacer"></td></tr>
+<td class="package">
 <p><a name="logroll"></a><b>logroll</b> - A basic logging library for Lua and Torch.<br/>
 </p><blockquote><p><br/>
 
