adding cuda-convnet2 rockspec

--- a/index.html
+++ b/index.html
@@ -76,6 +76,15 @@ scm-1:&nbsp;<a href="cairo-scm-1.rockspec">rockspec</a><br/>0.5.0-0:&nbsp;<a hre
 1.1-0:&nbsp;<a href="camera-1.1-0.rockspec">rockspec</a><br/>1.0-0:&nbsp;<a href="camera-1.0-0.rockspec">rockspec</a><br/></td></tr>
 <tr><td colspan="2" class="spacer"></td></tr>
 <td class="package">
+<p><a name="ccn2"></a><a href="#ccn2" class="pkg"><b>ccn2</b></a> - Torch7 bindings for cuda-convnet2 kernels!<br/>
+</p><blockquote><p> All cuda-convnet2 modules exposed as nn.Module derivatives so that they can be used with torch's neural network package <br/>
+
+<font size="-1"><a href="git://github.com/soumith/cuda-convnet2.torch.git">latest sources</a> | <a href="https://github.com/soumith/cuda-convnet2.torch" target="_blank">project homepage</a> | License: Apache 2.0</font></p>
+</blockquote></a></td>
+<td class="version">
+scm-1:&nbsp;<a href="ccn2-scm-1.rockspec">rockspec</a><br/></td></tr>
+<tr><td colspan="2" class="spacer"></td></tr>
+<td class="package">
 <p><a name="cephes"></a><a href="#cephes" class="pkg"><b>cephes</b></a> - Cephes mathematical functions library, wrapped for Torch<br/>
 </p><blockquote><p>Provides and wraps the 180+ special mathematical functions from the Cephes mathematical library, developed by Stephen L. Moshier. It is used, among many other places, at the heart of SciPy.<br/>
 
@@ -601,7 +610,7 @@ scm-1:&nbsp;<a href="sundown-scm-1.rockspec">rockspec</a><br/></td></tr>
 <p><a name="svm"></a><a href="#svm" class="pkg"><b>svm</b></a> - Torch-SVM library<br/>
 </p><blockquote><p>Torch-SVM library <br/>
 
-<font size="-1"><a href="git@github.com:koraykv/torch-svm.git">latest sources</a> | <a href="https://github.com/koraykv/torch-svm" target="_blank">project homepage</a> | License: BSD</font></p>
+<font size="-1"><a href="git://github.com/koraykv/torch-svm">latest sources</a> | <a href="https://github.com/koraykv/torch-svm" target="_blank">project homepage</a> | License: BSD</font></p>
 </blockquote></a></td>
 <td class="version">
 0.1-0:&nbsp;<a href="svm-0.1-0.rockspec">rockspec</a><br/></td></tr>
