adding nnbhwd kernels rockspec

--- a/index.html
+++ b/index.html
@@ -409,6 +409,15 @@ scm-0:&nbsp;<a href="ncurses-scm-0.rockspec">rockspec</a><br/></td></tr>
 scm-1:&nbsp;<a href="nn-scm-1.rockspec">rockspec</a><br/></td></tr>
 <tr><td colspan="2" class="spacer"></td></tr>
 <td class="package">
+<p><a name="nnbhwd"></a><a href="#nnbhwd" class="pkg"><b>nnbhwd</b></a> - CUDA SpatialConvolution and SpatialMaxPooling kernels for input layout of the form Batch-Height-Width-Depth<br/>
+</p><blockquote><p> CUDA SpatialConvolution and SpatialMaxPooling kernels for input layout of the form Batch-Height-Width-Depth <br/>
+
+<font size="-1"><a href="git://github.com/qassemoquab/nnbhwd">latest sources</a> | <a href="https://github.com/qassemoquab/nnbhwd" target="_blank">project homepage</a> | License: N/A</font></p>
+</blockquote></a></td>
+<td class="version">
+scm-1:&nbsp;<a href="nnbhwd-scm-1.rockspec">rockspec</a><br/></td></tr>
+<tr><td colspan="2" class="spacer"></td></tr>
+<td class="package">
 <p><a name="nngraph"></a><a href="#nngraph" class="pkg"><b>nngraph</b></a> - This package provides graphical computation for nn library in Torch7.<br/>
 </p><blockquote><p><br/>
 
