updating svm rock

--- a/index.html
+++ b/index.html
@@ -619,7 +619,7 @@ scm-1:&nbsp;<a href="sundown-scm-1.rockspec">rockspec</a><br/></td></tr>
 <p><a name="svm"></a><a href="#svm" class="pkg"><b>svm</b></a> - Torch-SVM library<br/>
 </p><blockquote><p>Torch-SVM library <br/>
 
-<font size="-1"><a href="git://github.com/koraykv/torch-svm">latest sources</a> | <a href="https://github.com/koraykv/torch-svm" target="_blank">project homepage</a> | License: BSD</font></p>
+<font size="-1"><a href="git@github.com:koraykv/torch-svm.git">latest sources</a> | <a href="https://github.com/koraykv/torch-svm" target="_blank">project homepage</a> | License: BSD</font></p>
 </blockquote></a></td>
 <td class="version">
 0.1-0:&nbsp;<a href="svm-0.1-0.rockspec">rockspec</a><br/></td></tr>
