adding loadcaffe rockspec

--- a/index.html
+++ b/index.html
@@ -337,6 +337,15 @@ scm-1:&nbsp;<a href="graph-scm-1.rockspec">rockspec</a><br/></td></tr>
 1.0-0:&nbsp;<a href="json-1.0-0.rockspec">rockspec</a><br/></td></tr>
 <tr><td colspan="2" class="spacer"></td></tr>
 <td class="package">
+<p><a name="loadcaffe"></a><a href="#loadcaffe" class="pkg"><b>loadcaffe</b></a> - Load Caffe networks in Torch7<br/>
+</p><blockquote><p>Loading Caffe networks without caffe dependency <br/>
+
+<font size="-1"><a href="git://github.com/szagoruyko/loadcaffe">latest sources</a> | <a href="https://github.com/szagoruyko/loadcaffe" target="_blank">project homepage</a> | License: BSD</font></p>
+</blockquote></a></td>
+<td class="version">
+1.0-0:&nbsp;<a href="loadcaffe-1.0-0.rockspec">rockspec</a><br/></td></tr>
+<tr><td colspan="2" class="spacer"></td></tr>
+<td class="package">
 <p><a name="logroll"></a><a href="#logroll" class="pkg"><b>logroll</b></a> - A basic logging library for Lua and Torch.<br/>
 </p><blockquote><p><br/>
 
@@ -619,7 +628,7 @@ scm-1:&nbsp;<a href="sundown-scm-1.rockspec">rockspec</a><br/></td></tr>
 <p><a name="svm"></a><a href="#svm" class="pkg"><b>svm</b></a> - Torch-SVM library<br/>
 </p><blockquote><p>Torch-SVM library <br/>
 
-<font size="-1"><a href="git@github.com:koraykv/torch-svm.git">latest sources</a> | <a href="https://github.com/koraykv/torch-svm" target="_blank">project homepage</a> | License: BSD</font></p>
+<font size="-1"><a href="git://github.com/koraykv/torch-svm.git">latest sources</a> | <a href="https://github.com/koraykv/torch-svm" target="_blank">project homepage</a> | License: BSD</font></p>
 </blockquote></a></td>
 <td class="version">
 0.1-0:&nbsp;<a href="svm-0.1-0.rockspec">rockspec</a><br/></td></tr>
