--- a/index.html
+++ b/index.html
@@ -679,6 +679,15 @@ scm-1:&nbsp;<a href="torch-scm-1.rockspec">rockspec</a><br/>7.scm-0:&nbsp;<a hre
 1.1.alpha-0:&nbsp;<a href="torchffi-1.1.alpha-0.rockspec">rockspec</a><br/></td></tr>
 <tr><td colspan="2" class="spacer"></td></tr>
 <td class="package">
+<p><a name="torchx"></a><a href="#torchx" class="pkg"><b>torchx</b></a> - torch extensions<br/>
+</p><blockquote><p> Experimental torch extensions <br/>
+
+<font size="-1"><a href="git://github.com/nicholas-leonard/torchx">latest sources</a> | <a href="https://github.com/nicholas-leonard/torchx/blob/master/README.md" target="_blank">project homepage</a> | License: N/A</font></p>
+</blockquote></a></td>
+<td class="version">
+scm-1:&nbsp;<a href="torchx-scm-1.rockspec">rockspec</a><br/></td></tr>
+<tr><td colspan="2" class="spacer"></td></tr>
+<td class="package">
 <p><a name="totem"></a><a href="#totem" class="pkg"><b>totem</b></a> - Torch test module<br/>
 </p><blockquote><p><br/>
 
