Update manifest and index.html

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ scm-1:&nbsp;<a href="ccn2-scm-1.rockspec">rockspec</a><br/></td></tr>
 <p><a name="cephes"></a><a href="#cephes" class="pkg"><b>cephes</b></a> - Cephes mathematical functions library, wrapped for Torch<br/>
 </p><blockquote><p>Provides and wraps the 180+ special mathematical functions from the Cephes mathematical library, developed by Stephen L. Moshier. It is used, among many other places, at the heart of SciPy.<br/>
 
-<font size="-1"><a href="git://github.com/jucor/torch-cephes.git">latest sources</a> | <a href="http://jucor.github.io/torch-cephes" target="_blank">project homepage</a> | License: BSD</font></p>
+<font size="-1"><a href="git://github.com/deepmind/torch-cephes.git">latest sources</a> | <a href="http://github.com/deepmind/torch-cephes" target="_blank">project homepage</a> | License: BSD</font></p>
 </blockquote></a></td>
 <td class="version">
 0-0:&nbsp;<a href="cephes-0-0.rockspec">rockspec</a><br/></td></tr>
@@ -295,7 +295,7 @@ scm-1:&nbsp;<a href="graph-scm-1.rockspec">rockspec</a><br/></td></tr>
 <p><a name="hdf5"></a><a href="#hdf5" class="pkg"><b>hdf5</b></a> - Interface to HDF5 library<br/>
 </p><blockquote><p>Read and write Torch tensor data to and from Hierarchical Data Format files.<br/>
 
-<font size="-1"><a href="git://github.com/d11/torch-hdf5.git">latest sources</a> | <a href="http://d11.github.io/torch-hdf5" target="_blank">project homepage</a> | License: BSD</font></p>
+<font size="-1"><a href="git://github.com/deepmind/torch-hdf5.git">latest sources</a> | <a href="http://github.com/deepmind/torch-hdf5" target="_blank">project homepage</a> | License: BSD</font></p>
 </blockquote></a></td>
 <td class="version">
 0-0:&nbsp;<a href="hdf5-0-0.rockspec">rockspec</a><br/></td></tr>
@@ -489,11 +489,21 @@ scm-1:&nbsp;<a href="paths-scm-1.rockspec">rockspec</a><br/></td></tr>
 <td class="version">
 scm-0:&nbsp;<a href="persist-scm-0.rockspec">rockspec</a><br/></td></tr>
 <tr><td colspan="2" class="spacer"></td></tr>
+<p><a name="plplot"></a><a href="#plplot" class="pkg"><b>plplot</b></a> - A FFI interface to PLplot<br/>
+</p><blockquote><p><br/>
+
+<font size="-1"><a href="git+file://git@github.com:deepmind/plplot-ffi.git">latest sources</a> | <a href="https://github.com/deepmind/plplot-ffi" target="_blank">project homepage</a> | License: N/A</font></p>
+</blockquote></a></td>
+<td class="version">
+0-0:&nbsp;<a href="plplot-0-0.rockspec">rockspec</a><br/></td></tr>
+<tr><td colspan="2" class="spacer"></td></tr>
+<td class="package">
+<p><a name="pprint"></a><b>pprint</b> - A pretty print library for Torch and lua.<br/>
 <td class="package">
 <p><a name="pprint"></a><a href="#pprint" class="pkg"><b>pprint</b></a> - A pretty print library for Torch and lua.<br/>
 </p><blockquote><p><br/>
 
-<font size="-1"><a href="git://github.com/akfidjeland/lua-pprint.git">latest sources</a> | <a href="https://github.com/akfidjeland/lua-pprint.git" target="_blank">project homepage</a> | License: N/A</font></p>
+<font size="-1"><a href="git://github.com/deepmind/lua-pprint.git">latest sources</a> | <a href="https://github.com/deepmind/lua-pprint.git" target="_blank">project homepage</a> | License: N/A</font></p>
 </blockquote></a></td>
 <td class="version">
 0-0:&nbsp;<a href="pprint-0-0.rockspec">rockspec</a><br/></td></tr>
@@ -529,7 +539,7 @@ scm-1:&nbsp;<a href="qttorch-scm-1.rockspec">rockspec</a><br/></td></tr>
 <p><a name="randomkit"></a><a href="#randomkit" class="pkg"><b>randomkit</b></a> - Numpy's randomkit, wrapped for Torch<br/>
 </p><blockquote><p>Provides and wraps the wide array of non-uniform random variate generators from the Randomkit C library, used at the heart of NumPy and distributed with permission. Interfaced with Torch's RNG functions to keep one single stream.<br/>
 
-<font size="-1"><a href="git://github.com/jucor/torch-randomkit.git">latest sources</a> | <a href="http://jucor.github.io/torch-randomkit" target="_blank">project homepage</a> | License: BSD</font></p>
+<font size="-1"><a href="git://github.com/deepmind/torch-randomkit.git">latest sources</a> | <a href="http://github.com/deepmind/torch-randomkit" target="_blank">project homepage</a> | License: BSD</font></p>
 </blockquote></a></td>
 <td class="version">
 0-1:&nbsp;<a href="randomkit-0-1.rockspec">rockspec</a><br/>0-0:&nbsp;<a href="randomkit-0-0.rockspec">rockspec</a><br/></td></tr>
@@ -691,7 +701,7 @@ scm-1:&nbsp;<a href="torchx-scm-1.rockspec">rockspec</a><br/></td></tr>
 <p><a name="totem"></a><a href="#totem" class="pkg"><b>totem</b></a> - Torch test module<br/>
 </p><blockquote><p><br/>
 
-<font size="-1"><a href="git://github.com/akfidjeland/torch-totem.git">latest sources</a> | <a href="https://github.com/akfidjeland/torch-totem" target="_blank">project homepage</a> | License: BSD</font></p>
+<font size="-1"><a href="git://github.com/deepmind/torch-totem.git">latest sources</a> | <a href="https://github.com/deepmind/torch-totem" target="_blank">project homepage</a> | License: BSD</font></p>
 </blockquote></a></td>
 <td class="version">
 0-0:&nbsp;<a href="totem-0-0.rockspec">rockspec</a><br/></td></tr>
