adding imagine-nn modules, which port some useful CUDA kernels from Caffe

--- a/index.html
+++ b/index.html
@@ -328,6 +328,15 @@ scm-1:&nbsp;<a href="graph-scm-1.rockspec">rockspec</a><br/></td></tr>
 1.0-0:&nbsp;<a href="inline-c-1.0-0.rockspec">rockspec</a><br/></td></tr>
 <tr><td colspan="2" class="spacer"></td></tr>
 <td class="package">
+<p><a name="inn"></a><a href="#inn" class="pkg"><b>inn</b></a> - IMAGINE/LIGM torch nn repository<br/>
+</p><blockquote><p>Universite Paris-Est MLV Imagine laboratory nn routines <br/>
+
+<font size="-1"><a href="git://github.com/szagoruyko/imagine-nn">latest sources</a> | <a href="https://github.com/szagoruyko/imagine-nn" target="_blank">project homepage</a> | License: BSD</font></p>
+</blockquote></a></td>
+<td class="version">
+1.0-0:&nbsp;<a href="inn-1.0-0.rockspec">rockspec</a><br/></td></tr>
+<tr><td colspan="2" class="spacer"></td></tr>
+<td class="package">
 <p><a name="json"></a><a href="#json" class="pkg"><b>json</b></a> - A JSON library, modified from JSON4Lua, for Torch<br/>
 </p><blockquote><p>A JSON read/write library for Torch. <br/>
 
