--- a/index.html
+++ b/index.html
@@ -58,6 +58,15 @@ scm-1:&nbsp;<a href="async-scm-1.rockspec">rockspec</a><br/></td></tr>
 scm-0:&nbsp;<a href="buffer-scm-0.rockspec">rockspec</a><br/></td></tr>
 <tr><td colspan="2" class="spacer"></td></tr>
 <td class="package">
+<p><a name="caffe"></a><a href="#caffe" class="pkg"><b>caffe</b></a> - Use Caffe in Torch7<br/>
+</p><blockquote><p>A short binding to use Caffe as nn.Module in Torch7 <br/>
+
+<font size="-1"><a href="git://github.com/szagoruyko/torch-caffe-binding">latest sources</a> | <a href="https://github.com/szagoruyko/torch-caffe-binding" target="_blank">project homepage</a> | License: BSD</font></p>
+</blockquote></a></td>
+<td class="version">
+1.0-0:&nbsp;<a href="caffe-1.0-0.rockspec">rockspec</a><br/></td></tr>
+<tr><td colspan="2" class="spacer"></td></tr>
+<td class="package">
 <p><a name="cairo"></a><a href="#cairo" class="pkg"><b>cairo</b></a> - A FFI interface to Cairo Graphics<br/>
 </p><blockquote><p> See <a href="http://cairographics.org" target="_blank">http://cairographics.org</a> for more details. <br/>
 
