adding metric earning manifest files

--- a/index.html
+++ b/index.html
@@ -409,6 +409,15 @@ scm-1:&nbsp;<a href="matio-scm-1.rockspec">rockspec</a><br/></td></tr>
 1.0-0:&nbsp;<a href="mattorch-1.0-0.rockspec">rockspec</a><br/></td></tr>
 <tr><td colspan="2" class="spacer"></td></tr>
 <td class="package">
+<p><a name="metriclearning"></a><a href="#metriclearning" class="pkg"><b>metriclearning</b></a> - A package for metric learning<br/>
+</p><blockquote><p>A package for metric learning. <br/>
+
+<font size="-1"><a href="git://github.com/lvdmaaten/metriclearning">latest sources</a> | <a href="https://github.com/lvdmaaten/metriclearning" target="_blank">project homepage</a> | License: MIT</font></p>
+</blockquote></a></td>
+<td class="version">
+scm-0:&nbsp;<a href="metriclearning-scm-0.rockspec">rockspec</a><br/></td></tr>
+<tr><td colspan="2" class="spacer"></td></tr>
+<td class="package">
 <p><a name="mnist"></a><a href="#mnist" class="pkg"><b>mnist</b></a> - Mnist dataset<br/>
 </p><blockquote><p> <br/>
 
