adding iTorch rockspec

--- a/index.html
+++ b/index.html
@@ -346,6 +346,15 @@ scm-1:&nbsp;<a href="graph-scm-1.rockspec">rockspec</a><br/></td></tr>
 1.0-0:&nbsp;<a href="inn-1.0-0.rockspec">rockspec</a><br/></td></tr>
 <tr><td colspan="2" class="spacer"></td></tr>
 <td class="package">
+<p><a name="itorch"></a><a href="#itorch" class="pkg"><b>itorch</b></a> - iPython kernel for Lua / Torch<br/>
+</p><blockquote><p> <br/>
+
+<font size="-1"><a href="git://github.com/soumith/iTorch.git">latest sources</a> | <a href="https://github.com/soumith/iTorch" target="_blank">project homepage</a> | License: BSD</font></p>
+</blockquote></a></td>
+<td class="version">
+scm-1:&nbsp;<a href="itorch-scm-1.rockspec">rockspec</a><br/></td></tr>
+<tr><td colspan="2" class="spacer"></td></tr>
+<td class="package">
 <p><a name="json"></a><a href="#json" class="pkg"><b>json</b></a> - A JSON library, modified from JSON4Lua, for Torch<br/>
 </p><blockquote><p>A JSON read/write library for Torch. <br/>
 
@@ -520,7 +529,7 @@ scm-0:&nbsp;<a href="persist-scm-0.rockspec">rockspec</a><br/></td></tr>
 <p><a name="plplot"></a><a href="#plplot" class="pkg"><b>plplot</b></a> - A FFI interface to PLplot<br/>
 </p><blockquote><p><br/>
 
-<font size="-1"><a href="git+file://git@github.com:deepmind/plplot-ffi.git">latest sources</a> | <a href="https://github.com/deepmind/plplot-ffi" target="_blank">project homepage</a> | License: N/A</font></p>
+<font size="-1"><a href="git://github.com/deepmind/plplot-ffi.git">latest sources</a> | <a href="https://github.com/deepmind/plplot-ffi" target="_blank">project homepage</a> | License: N/A</font></p>
 </blockquote></a></td>
 <td class="version">
 0-0:&nbsp;<a href="plplot-0-0.rockspec">rockspec</a><br/></td></tr>
