adding szym/display rock

--- a/index.html
+++ b/index.html
@@ -175,6 +175,15 @@ scm-1:&nbsp;<a href="cutorch-scm-1.rockspec">rockspec</a><br/></td></tr>
 scm-1:&nbsp;<a href="cwrap-scm-1.rockspec">rockspec</a><br/></td></tr>
 <tr><td colspan="2" class="spacer"></td></tr>
 <td class="package">
+<p><a name="display"></a><a href="#display" class="pkg"><b>display</b></a> - A browser-based graphics server with a Torch7 client.<br/>
+</p><blockquote><p>A simple node.js server pushes images and charts to the browser.<br/>
+
+<font size="-1"><a href="git://github.com/szym/display">latest sources</a> | <a href="https://github.com/szym/display" target="_blank">project homepage</a> | License: MIT</font></p>
+</blockquote></a></td>
+<td class="version">
+scm-0:&nbsp;<a href="display-scm-0.rockspec">rockspec</a><br/></td></tr>
+<tr><td colspan="2" class="spacer"></td></tr>
+<td class="package">
 <p><a name="dok"></a><a href="#dok" class="pkg"><b>dok</b></a> - Support for the old torch7 dok system<br/>
 </p><blockquote><p> <br/>
 
@@ -349,7 +358,7 @@ scm-1:&nbsp;<a href="graph-scm-1.rockspec">rockspec</a><br/></td></tr>
 <p><a name="itorch"></a><a href="#itorch" class="pkg"><b>itorch</b></a> - iPython kernel for Lua / Torch<br/>
 </p><blockquote><p> <br/>
 
-<font size="-1"><a href="git://github.com/soumith/iTorch.git">latest sources</a> | <a href="https://github.com/soumith/iTorch" target="_blank">project homepage</a> | License: BSD</font></p>
+<font size="-1"><a href="git://github.com/facebook/iTorch.git">latest sources</a> | <a href="https://github.com/facebook/iTorch" target="_blank">project homepage</a> | License: BSD</font></p>
 </blockquote></a></td>
 <td class="version">
 scm-1:&nbsp;<a href="itorch-scm-1.rockspec">rockspec</a><br/></td></tr>
