added sndfile rock

--- a/index.html
+++ b/index.html
@@ -661,6 +661,15 @@ scm-1:&nbsp;<a href="sdl2-scm-1.rockspec">rockspec</a><br/></td></tr>
 scm-1:&nbsp;<a href="signal-scm-1.rockspec">rockspec</a><br/></td></tr>
 <tr><td colspan="2" class="spacer"></td></tr>
 <td class="package">
+<p><a name="sndfile"></a><a href="#sndfile" class="pkg"><b>sndfile</b></a> - libsndfile interface for Lua<br/>
+</p><blockquote><p> <br/>
+
+<font size="-1"><a href="git://github.com/andresy/lua---sndfile">latest sources</a> | <a href="https://github.com/andresy/lua---sndfile" target="_blank">project homepage</a> | License: BSD</font></p>
+</blockquote></a></td>
+<td class="version">
+scm-1:&nbsp;<a href="sndfile-scm-1.rockspec">rockspec</a><br/></td></tr>
+<tr><td colspan="2" class="spacer"></td></tr>
+<td class="package">
 <p><a name="strict"></a><a href="#strict" class="pkg"><b>strict</b></a> - Detect reading of undeclared variables and creating of global variables<br/>
 </p><blockquote><p><br/>
 
