added rational rockspec

--- a/index.html
+++ b/index.html
@@ -589,6 +589,15 @@ scm-1:&nbsp;<a href="qttorch-scm-1.rockspec">rockspec</a><br/></td></tr>
 0-1:&nbsp;<a href="randomkit-0-1.rockspec">rockspec</a><br/>0-0:&nbsp;<a href="randomkit-0-0.rockspec">rockspec</a><br/></td></tr>
 <tr><td colspan="2" class="spacer"></td></tr>
 <td class="package">
+<p><a name="rational"></a><a href="#rational" class="pkg"><b>rational</b></a> - rational numbers for lua<br/>
+</p><blockquote><p> Implements rational number operations (with appropriate operators). <br/>
+
+<font size="-1"><a href="git://github.com/torch/rational.git">latest sources</a> | <a href="https://github.com/torch/rational" target="_blank">project homepage</a> | License: BSD</font></p>
+</blockquote></a></td>
+<td class="version">
+scm-1:&nbsp;<a href="rational-scm-1.rockspec">rockspec</a><br/></td></tr>
+<tr><td colspan="2" class="spacer"></td></tr>
+<td class="package">
 <p><a name="redis-async"></a><a href="#redis-async" class="pkg"><b>redis-async</b></a> - A redis client built off the torch/lua async framework<br/>
 </p><blockquote><p>A redis client built off the torch/lua async framework <br/>
 
