--- a/index.html
+++ b/index.html
@@ -733,8 +733,8 @@ scm-1:&nbsp;<a href="tds-scm-1.rockspec">rockspec</a><br/></td></tr>
 scm-1:&nbsp;<a href="thmap-scm-1.rockspec">rockspec</a><br/></td></tr>
 <tr><td colspan="2" class="spacer"></td></tr>
 <td class="package">
-<p><a name="threads"></a><a href="#threads" class="pkg"><b>threads</b></a> - A FFI threading system<br/>
-</p><blockquote><p>A LuaJIT-based theading system. Relies on SDL2 threads for portability. Transparent exchange of data between threads is allowed thanks to torch serialization. <br/>
+<p><a name="threads"></a><a href="#threads" class="pkg"><b>threads</b></a> - Threads for Torch<br/>
+</p><blockquote><p>Threading system for Torch. Relies on pthread (or Windows threads). Transparent exchange of data between threads is allowed thanks to torch serialization. <br/>
 
 <font size="-1"><a href="git://github.com/torch/threads-ffi.git">latest sources</a> | <a href="https://github.com/torch/threads-ffi" target="_blank">project homepage</a> | License: BSD</font></p>
 </blockquote></a></td>
