--- a/index.html
+++ b/index.html
@@ -202,6 +202,15 @@ scm-1:&nbsp;<a href="dok-scm-1.rockspec">rockspec</a><br/></td></tr>
 scm-1:&nbsp;<a href="dp-scm-1.rockspec">rockspec</a><br/></td></tr>
 <tr><td colspan="2" class="spacer"></td></tr>
 <td class="package">
+<p><a name="dpnn"></a><a href="#dpnn" class="pkg"><b>dpnn</b></a> - deep extensions to nn Modules and Criterions<br/>
+</p><blockquote><p>sharedClone, type, outside, updateGradParameters, Serial, Inception, etc.<br/>
+
+<font size="-1"><a href="git://github.com/nicholas-leonard/dpnn">latest sources</a> | <a href="https://github.com/nicholas-leonard/dpnn" target="_blank">project homepage</a> | License: BSD</font></p>
+</blockquote></a></td>
+<td class="version">
+scm-1:&nbsp;<a href="dpnn-scm-1.rockspec">rockspec</a><br/></td></tr>
+<tr><td colspan="2" class="spacer"></td></tr>
+<td class="package">
 <p><a name="eex"></a><a href="#eex" class="pkg"><b>eex</b></a> - Torch extras from e-Lab<br/>
 </p><blockquote><p>This is a Torch extra package from e-Lab. <br/>
 
