added hash rockspec

--- a/index.html
+++ b/index.html
@@ -319,6 +319,15 @@ scm-1:&nbsp;<a href="graph-scm-1.rockspec">rockspec</a><br/></td></tr>
 1.scm-0:&nbsp;<a href="graphicsmagick-1.scm-0.rockspec">rockspec</a><br/></td></tr>
 <tr><td colspan="2" class="spacer"></td></tr>
 <td class="package">
+<p><a name="hash"></a><a href="#hash" class="pkg"><b>hash</b></a> - Hash for Torch<br/>
+</p><blockquote><p> Hashing stuff. <br/>
+
+<font size="-1"><a href="git://github.com/torch/hash.git">latest sources</a> | <a href="https://github.com/torch/hash" target="_blank">project homepage</a> | License: BSD</font></p>
+</blockquote></a></td>
+<td class="version">
+scm-1:&nbsp;<a href="hash-scm-1.rockspec">rockspec</a><br/></td></tr>
+<tr><td colspan="2" class="spacer"></td></tr>
+<td class="package">
 <p><a name="hdf5"></a><a href="#hdf5" class="pkg"><b>hdf5</b></a> - Interface to HDF5 library<br/>
 </p><blockquote><p>Read and write Torch tensor data to and from Hierarchical Data Format files.<br/>
 
