add clnn and cltorch

--- a/index.html
+++ b/index.html
@@ -112,6 +112,24 @@ scm-1:&nbsp;<a href="ccn2-scm-1.rockspec">rockspec</a><br/></td></tr>
 scm-1:&nbsp;<a href="class-scm-1.rockspec">rockspec</a><br/>0.5.0-0:&nbsp;<a href="class-0.5.0-0.rockspec">rockspec</a><br/></td></tr>
 <tr><td colspan="2" class="spacer"></td></tr>
 <td class="package">
+<p><a name="clnn"></a><a href="#clnn" class="pkg"><b>clnn</b></a> - Torch OpenCL Neural Network Implementation<br/>
+</p><blockquote><p> <br/>
+
+<font size="-1"><a href="git://github.com/hughperkins/clnn.git">latest sources</a> | <a href="https://github.com/hughperkins/clnn" target="_blank">project homepage</a> | License: BSD</font></p>
+</blockquote></a></td>
+<td class="version">
+scm-1:&nbsp;<a href="clnn-scm-1.rockspec">rockspec</a><br/></td></tr>
+<tr><td colspan="2" class="spacer"></td></tr>
+<td class="package">
+<p><a name="cltorch"></a><a href="#cltorch" class="pkg"><b>cltorch</b></a> - OpenCL backend for Torch<br/>
+</p><blockquote><p> <br/>
+
+<font size="-1"><a href="git://github.com/hughperkins/cltorch.git">latest sources</a> | <a href="https://github.com/hughperkins/cltorch" target="_blank">project homepage</a> | License: BSD</font></p>
+</blockquote></a></td>
+<td class="version">
+scm-1:&nbsp;<a href="cltorch-scm-1.rockspec">rockspec</a><br/></td></tr>
+<tr><td colspan="2" class="spacer"></td></tr>
+<td class="package">
 <p><a name="csvigo"></a><a href="#csvigo" class="pkg"><b>csvigo</b></a> - A CSV library, for Torch<br/>
 </p><blockquote><p>A CSV read/write library for Torch. <br/>
 
