--- a/index.html
+++ b/index.html
@@ -709,7 +709,7 @@ scm-1:&nbsp;<a href="sdl2-scm-1.rockspec">rockspec</a><br/></td></tr>
 <p><a name="signal"></a><a href="#signal" class="pkg"><b>signal</b></a> - A signal processing toolbox for Torch-7<br/>
 </p><blockquote><p> A signal processing toolbox for Torch-7 <br/>
 
-<font size="-1"><a href="git://github.com/soumith/torch-signal.git">latest sources</a> | <a href="https://github.com/soumith/torch-signal" target="_blank">project homepage</a> | License: GPLV3</font></p>
+<font size="-1"><a href="git://github.com/soumith/torch-signal.git">latest sources</a> | <a href="https://github.com/soumith/torch-signal" target="_blank">project homepage</a> | License: BSD</font></p>
 </blockquote></a></td>
 <td class="version">
 scm-1:&nbsp;<a href="signal-scm-1.rockspec">rockspec</a><br/></td></tr>
