--- a/index.html
+++ b/index.html
@@ -508,6 +508,15 @@ scm-1:&nbsp;<a href="nn-scm-1.rockspec">rockspec</a><br/></td></tr>
 scm-1:&nbsp;<a href="nnbhwd-scm-1.rockspec">rockspec</a><br/></td></tr>
 <tr><td colspan="2" class="spacer"></td></tr>
 <td class="package">
+<p><a name="nnfunc"></a><a href="#nnfunc" class="pkg"><b>nnfunc</b></a> - Functional API for nn<br/>
+</p><blockquote><p><br/>
+
+<font size="-1"><a href="git@github.com:clementfarabet/nnfunc.git">latest sources</a> | <a href="https://github.com/clementfarabet/nnfunc" target="_blank">project homepage</a> | License: MIT</font></p>
+</blockquote></a></td>
+<td class="version">
+scm-1:&nbsp;<a href="nnfunc-scm-1.rockspec">rockspec</a><br/></td></tr>
+<tr><td colspan="2" class="spacer"></td></tr>
+<td class="package">
 <p><a name="nngraph"></a><a href="#nngraph" class="pkg"><b>nngraph</b></a> - This package provides graphical computation for nn library in Torch7.<br/>
 </p><blockquote><p><br/>
 
