Add luaffi rockspec

--- a/index.html
+++ b/index.html
@@ -427,6 +427,15 @@ scm-1:&nbsp;<a href="itorch-scm-1.rockspec">rockspec</a><br/></td></tr>
 0-0:&nbsp;<a href="logroll-0-0.rockspec">rockspec</a><br/></td></tr>
 <tr><td colspan="2" class="spacer"></td></tr>
 <td class="package">
+<p><a name="luaffi"></a><a href="#luaffi" class="pkg"><b>luaffi</b></a> - FFI library for calling C functions from lua<br/>
+</p><blockquote><p> <br/>
+
+<font size="-1"><a href="https://github.com/facebook/luaffifb.git">latest sources</a> | <a href="https://github.com/facebook/luaffifb" target="_blank">project homepage</a> | License: BSD</font></p>
+</blockquote></a></td>
+<td class="version">
+scm-1:&nbsp;<a href="luaffi-scm-1.rockspec">rockspec</a><br/></td></tr>
+<tr><td colspan="2" class="spacer"></td></tr>
+<td class="package">
 <p><a name="luaforever"></a><a href="#luaforever" class="pkg"><b>luaforever</b></a> - Run a script forever.<br/>
 </p><blockquote><p>Run a script forever. <br/>
 
