updated tds rockspec

--- a/index.html
+++ b/index.html
@@ -430,7 +430,7 @@ scm-1:&nbsp;<a href="itorch-scm-1.rockspec">rockspec</a><br/></td></tr>
 <p><a name="luaffi"></a><a href="#luaffi" class="pkg"><b>luaffi</b></a> - FFI library for calling C functions from lua<br/>
 </p><blockquote><p> <br/>
 
-<font size="-1"><a href="https://github.com/facebook/luaffifb.git">latest sources</a> | <a href="https://github.com/facebook/luaffifb" target="_blank">project homepage</a> | License: BSD</font></p>
+<font size="-1"><a href="git://github.com/facebook/luaffifb.git">latest sources</a> | <a href="https://github.com/facebook/luaffifb" target="_blank">project homepage</a> | License: BSD</font></p>
 </blockquote></a></td>
 <td class="version">
 scm-1:&nbsp;<a href="luaffi-scm-1.rockspec">rockspec</a><br/></td></tr>
