adding autograd rockspec

--- a/index.html
+++ b/index.html
@@ -49,6 +49,15 @@ scm-1:&nbsp;<a href="async-scm-1.rockspec">rockspec</a><br/></td></tr>
 0.1-0:&nbsp;<a href="audio-0.1-0.rockspec">rockspec</a><br/></td></tr>
 <tr><td colspan="2" class="spacer"></td></tr>
 <td class="package">
+<p><a name="autograd"></a><a href="#autograd" class="pkg"><b>autograd</b></a> - Automatic differentiation for Torch.<br/>
+</p><blockquote><p><br/>
+
+<font size="-1"><a href="">latest sources</a> | <a href="" target="_blank">project homepage</a> | License: MIT</font></p>
+</blockquote></a></td>
+<td class="version">
+scm-1:&nbsp;<a href="autograd-scm-1.rockspec">rockspec</a><br/></td></tr>
+<tr><td colspan="2" class="spacer"></td></tr>
+<td class="package">
 <p><a name="buffer"></a><a href="#buffer" class="pkg"><b>buffer</b></a> - A buffer object for LuaJIT<br/>
 </p><blockquote><p>A buffer object for LuaJIT <br/>
 
