--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ scm-1:&nbsp;<a href="async-scm-1.rockspec">rockspec</a><br/></td></tr>
 <p><a name="autograd"></a><a href="#autograd" class="pkg"><b>autograd</b></a> - Automatic differentiation for Torch.<br/>
 </p><blockquote><p><br/>
 
-<font size="-1"><a href="">latest sources</a> | <a href="" target="_blank">project homepage</a> | License: MIT</font></p>
+<font size="-1"><a href="git://github.com/twitter/torch-autograd.git">latest sources</a> | <a href="" target="_blank">project homepage</a> | License: MIT</font></p>
 </blockquote></a></td>
 <td class="version">
 scm-1:&nbsp;<a href="autograd-scm-1.rockspec">rockspec</a><br/></td></tr>
