Add nninit rockspec

--- a/index.html
+++ b/index.html
@@ -544,6 +544,15 @@ scm-1:&nbsp;<a href="nnfunc-scm-1.rockspec">rockspec</a><br/></td></tr>
 scm-1:&nbsp;<a href="nngraph-scm-1.rockspec">rockspec</a><br/></td></tr>
 <tr><td colspan="2" class="spacer"></td></tr>
 <td class="package">
+<p><a name="nninit"></a><a href="#nninit" class="pkg"><b>nninit</b></a> - Weight initialisation schemes for Torch7 neural network modules<br/>
+</p><blockquote><p> Weight initialisation schemes for Torch7 neural network modules <br/>
+
+<font size="-1"><a href="git://github.com/Kaixhin/nninit">latest sources</a> | <a href="https://github.com/Kaixhin/nninit" target="_blank">project homepage</a> | License: MIT</font></p>
+</blockquote></a></td>
+<td class="version">
+scm-1:&nbsp;<a href="nninit-scm-1.rockspec">rockspec</a><br/></td></tr>
+<tr><td colspan="2" class="spacer"></td></tr>
+<td class="package">
 <p><a name="nnx"></a><a href="#nnx" class="pkg"><b>nnx</b></a> - A completely unstable and experimental package that extends Torch's builtin nn library<br/>
 </p><blockquote><p>This is an experimental package that extends nn. You've be warned! <br/>
 
