adding nccl rockspec

--- a/index.html
+++ b/index.html
@@ -499,6 +499,15 @@ scm-0:&nbsp;<a href="metriclearning-scm-0.rockspec">rockspec</a><br/></td></tr>
 scm-1:&nbsp;<a href="mnist-scm-1.rockspec">rockspec</a><br/></td></tr>
 <tr><td colspan="2" class="spacer"></td></tr>
 <td class="package">
+<p><a name="nccl"></a><a href="#nccl" class="pkg"><b>nccl</b></a> - Torch7 FFI bindings for NVIDIA nccl kernels!<br/>
+</p><blockquote><p><br/>
+
+<font size="-1"><a href="git://github.com/ngimel/nccl.torch.git">latest sources</a> | <a href="https://github.com/ngimel/nccl.torch" target="_blank">project homepage</a> | License: BSD</font></p>
+</blockquote></a></td>
+<td class="version">
+scm-1:&nbsp;<a href="nccl-scm-1.rockspec">rockspec</a><br/></td></tr>
+<tr><td colspan="2" class="spacer"></td></tr>
+<td class="package">
 <p><a name="ncurses"></a><a href="#ncurses" class="pkg"><b>ncurses</b></a> - A lua wrapper for ncurses<br/>
 </p><blockquote><p>A lua wrapper for ncurses <br/>
 
