adding lmdb.torch manifest

--- a/index.html
+++ b/index.html
@@ -418,6 +418,15 @@ scm-1:&nbsp;<a href="itorch-scm-1.rockspec">rockspec</a><br/></td></tr>
 1.0-0:&nbsp;<a href="json-1.0-0.rockspec">rockspec</a><br/></td></tr>
 <tr><td colspan="2" class="spacer"></td></tr>
 <td class="package">
+<p><a name="lmdb.torch"></a><a href="#lmdb.torch" class="pkg"><b>lmdb.torch</b></a> - LMDB wrappers for Torch<br/>
+</p><blockquote><p> <br/>
+
+<font size="-1"><a href="git://github.com/eladhoffer/lmdb.torch.git">latest sources</a> | <a href="https://github.com/eladhoffer/lmdb.torch" target="_blank">project homepage</a> | License: N/A</font></p>
+</blockquote></a></td>
+<td class="version">
+scm-1:&nbsp;<a href="lmdb.torch-scm-1.rockspec">rockspec</a><br/></td></tr>
+<tr><td colspan="2" class="spacer"></td></tr>
+<td class="package">
 <p><a name="loadcaffe"></a><a href="#loadcaffe" class="pkg"><b>loadcaffe</b></a> - Load Caffe networks in Torch7<br/>
 </p><blockquote><p>Loading Caffe networks without caffe dependency <br/>
 
