--- a/index.html
+++ b/index.html
@@ -937,7 +937,7 @@ scm-1:&nbsp;<a href="utf8-scm-1.rockspec">rockspec</a><br/></td></tr>
 <font size="-1"><a href="git://github.com/torch/xlua">latest sources</a> | <a href="https://github.com/torch/xlua" target="_blank">project homepage</a> | License: BSD</font></p>
 </blockquote></a></td>
 <td class="version">
-1.0-0:&nbsp;<a href="xlua-1.0-0.rockspec">rockspec</a><br/></td></tr>
+1.1-0:&nbsp;<a href="xlua-1.1-0.rockspec">rockspec</a><br/>1.0-0:&nbsp;<a href="xlua-1.0-0.rockspec">rockspec</a><br/></td></tr>
 <tr><td colspan="2" class="spacer"></td></tr>
 </table>
 
