fix display rockspec

--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@ scm-1:&nbsp;<a href="cutorch-scm-1.rockspec">rockspec</a><br/></td></tr>
 scm-1:&nbsp;<a href="cwrap-scm-1.rockspec">rockspec</a><br/></td></tr>
 <tr><td colspan="2" class="spacer"></td></tr>
 <td class="package">
-<p><a name="display"></a><a href="#display" class="pkg"><b>display</b></a> - A browser-based graphics server with a Torch7 client.<br/>
+<p><a name="display"></a><a href="#display" class="pkg"><b>display</b></a> - A browser-based graphics server with a Torch client.<br/>
 </p><blockquote><p>A simple node.js server pushes images and charts to the browser.<br/>
 
 <font size="-1"><a href="git://github.com/szym/display">latest sources</a> | <a href="https://github.com/szym/display" target="_blank">project homepage</a> | License: MIT</font></p>
