added manifest for opencv

--- a/index.html
+++ b/index.html
@@ -193,6 +193,15 @@ scm-1:&nbsp;<a href="cunnx-scm-1.rockspec">rockspec</a><br/></td></tr>
 scm-1:&nbsp;<a href="cutorch-scm-1.rockspec">rockspec</a><br/></td></tr>
 <tr><td colspan="2" class="spacer"></td></tr>
 <td class="package">
+<p><a name="cv"></a><a href="#cv" class="pkg"><b>cv</b></a> - OpenCV bindings for LuaJIT+Torch<br/>
+</p><blockquote><p> OpenCV bindings for LuaJIT+Torch <br/>
+
+<font size="-1"><a href="git://github.com/VisionLabs/torch-opencv">latest sources</a> | <a href="https://github.com/VisionLabs/torch-opencv" target="_blank">project homepage</a> | License: N/A</font></p>
+</blockquote></a></td>
+<td class="version">
+scm-1:&nbsp;<a href="cv-scm-1.rockspec">rockspec</a><br/></td></tr>
+<tr><td colspan="2" class="spacer"></td></tr>
+<td class="package">
 <p><a name="cwrap"></a><a href="#cwrap" class="pkg"><b>cwrap</b></a> - Advanced automatic wrapper for C functions<br/>
 </p><blockquote><p> <br/>
 
