--- a/index.html
+++ b/index.html
@@ -697,6 +697,15 @@ scm-1:&nbsp;<a href="qttorch-scm-1.rockspec">rockspec</a><br/></td></tr>
 scm-1:&nbsp;<a href="rational-scm-1.rockspec">rockspec</a><br/></td></tr>
 <tr><td colspan="2" class="spacer"></td></tr>
 <td class="package">
+<p><a name="recurrent"></a><a href="#recurrent" class="pkg"><b>recurrent</b></a> - Recurrent container for Torch<br/>
+</p><blockquote><p> Recurrent container for torch <br/>
+
+<font size="-1"><a href="git://github.com/eladhoffer/recurrent.torch.git">latest sources</a> | <a href="https://github.com/ehoffer/recurrent.torch" target="_blank">project homepage</a> | License: N/A</font></p>
+</blockquote></a></td>
+<td class="version">
+scm-1:&nbsp;<a href="recurrent-scm-1.rockspec">rockspec</a><br/></td></tr>
+<tr><td colspan="2" class="spacer"></td></tr>
+<td class="package">
 <p><a name="redis-async"></a><a href="#redis-async" class="pkg"><b>redis-async</b></a> - A redis client built off the torch/lua async framework<br/>
 </p><blockquote><p>A redis client built off the torch/lua async framework <br/>
 
