New rock for regress pkg.

--- a/index.html
+++ b/index.html
@@ -733,6 +733,15 @@ scm-0:&nbsp;<a href="redis-queue-scm-0.rockspec">rockspec</a><br/></td></tr>
 scm-0:&nbsp;<a href="redis-status-scm-0.rockspec">rockspec</a><br/></td></tr>
 <tr><td colspan="2" class="spacer"></td></tr>
 <td class="package">
+<p><a name="regress"></a><a href="#regress" class="pkg"><b>regress</b></a> - Regression tests made easy<br/>
+</p><blockquote><p><br/>
+
+<font size="-1"><a href="git://github.com/clementfarabet/regress.git">latest sources</a> | <a href="https://github.com/clementfarabet/regress" target="_blank">project homepage</a> | License: Twitter</font></p>
+</blockquote></a></td>
+<td class="version">
+scm-1:&nbsp;<a href="regress-scm-1.rockspec">rockspec</a><br/></td></tr>
+<tr><td colspan="2" class="spacer"></td></tr>
+<td class="package">
 <p><a name="restclient"></a><a href="#restclient" class="pkg"><b>restclient</b></a> - A REST Client.<br/>
 </p><blockquote><p>A client to REST APIs. <br/>
 
